<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BikeMapper</string>
    <string name="station_name_placeholder">Station Name Here</string>
    <string name="dummy_text">Dummy</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>

    <string name="bikes_amount_label">Bikes</string>
    <string name="docks_amount_label">Docks</string>
    <string name="zero">0</string>

    <string name="contact_email">example@example.com</string>

    <string name="ad_unit_id">ca-app-pub-3545068976746355/6474633821</string>
    <string name="note3_id">357518051496230</string>

</resources>
