<com.flyingtoaster.bikemapper.SlidingUpPanelLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:sothree="http://schemas.android.com/apk/res-auto"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:id="@+id/sliding_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="bottom"
    sothree:panelHeight="0dp"
    sothree:shadowHeight="4dp"
    sothree:fadeColor="@android:color/transparent">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">


        <fragment
            android:id="@+id/toronto_fragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:name="com.google.android.gms.maps.MapFragment"
            tools:layout="@layout/fragment_bottom_bar" />

        <com.google.android.gms.ads.AdView android:id="@+id/ad_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            ads:adUnitId="@string/ad_unit_id"
            ads:adSize="BANNER"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/sliding_panel_expanded_height">

        <LinearLayout
            android:id="@+id/sliding_content_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@color/green_light">
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="@dimen/sliding_panel_border_width"
                android:background="@color/sliding_panel_border_color"/>

            <RelativeLayout
                android:id="@+id/station_name_view"
                android:layout_width="match_parent"
                android:layout_height="@dimen/station_title_view_height"
                android:background="@color/green_light">

                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/drag_view">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:padding="@dimen/collapse_icon_padding"
                        android:src="@drawable/ic_action_expand"/>
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:padding="@dimen/collapse_icon_padding"
                        android:src="@drawable/ic_action_expand"/>
                </RelativeLayout>
                <TextView
                    android:id="@+id/station_name_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/station_title_vertical_padding"
                    android:layout_marginBottom="@dimen/station_title_vertical_padding"
                    android:layout_marginLeft="@dimen/station_title_horizontal_padding"
                    android:layout_marginRight="@dimen/station_title_horizontal_padding"
                    android:textColor="@color/sliding_panel_text_color"
                    android:gravity="top|center_horizontal"
                    android:textSize="@dimen/station_title_size"
                    android:layout_centerHorizontal="true"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="@dimen/info_margin"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/bikes_amount_textview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textColor="@color/sliding_panel_text_color"
                        android:textSize="@dimen/item_amount_size"
                        android:text="@string/zero"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textColor="@color/sliding_panel_text_color"
                        android:textSize="@dimen/item_label_size"
                        android:text="@string/bikes_amount_label"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="@dimen/info_margin"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/docks_amount_textview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textSize="@dimen/item_amount_size"
                        android:textColor="@color/sliding_panel_text_color"
                        android:text="@string/zero"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textColor="@color/sliding_panel_text_color"
                        android:textSize="@dimen/item_label_size"
                        android:text="@string/docks_amount_label"/>
                </LinearLayout>
            </RelativeLayout>
        </LinearLayout>

        <ImageButton
            android:id="@+id/navigate_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:layout_margin="4dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:src="@drawable/ic_action_directions"
            android:background="@drawable/transparent_button"/>


        <ImageButton
            android:id="@+id/refresh_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:layout_margin="4dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentBottom="true"
            android:src="@drawable/ic_action_refresh"
            android:background="@drawable/transparent_button"/>
    </RelativeLayout>
</com.flyingtoaster.bikemapper.SlidingUpPanelLayout>